hard-gists/6019350/run.log
=== Docker Run Log for 6019350 ===
Started at: Mi 29. Okt 16:18:04 CET 2025

[2025-10-29 16:18:04] START: Running container for 6019350
[2025-10-29 16:18:05] SUCCESS: Container 96cd0c10c00128534fdb217913ff57e530dc183d27f8252cf572d9624c480f00 started for 6019350
=== Container logs for 6019350 ===
  File "/snippet.py", line 23
    print 'Updating Model'
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6019350 ===
[2025-10-29 16:18:07] INFO: Container 96cd0c10c00128534fdb217913ff57e530dc183d27f8252cf572d9624c480f00 has stopped
